<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/button1"
                app:layout_constraintRight_toLeftOf="@+id/inbox"
                app:layout_constraintTop_toTopOf="@+id/button1" />

            <Button
                android:id="@+id/inbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/img1"
                app:layout_constraintRight_toLeftOf="imgn1"
                app:layout_constraintTop_toTopOf="@+id/button1"
                android:textAllCaps="false"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:text="@string/inbox" />

            <ImageView
                android:id="@+id/imgn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/inbox"
                app:layout_constraintRight_toRightOf="@+id/button1"
                app:layout_constraintTop_toTopOf="@+id/button1" />

        </android.support.constraint.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/button2"
                app:layout_constraintRight_toLeftOf="@+id/sent"
                app:layout_constraintTop_toTopOf="@+id/button2" />

            <Button
                android:id="@+id/sent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/img2"
                app:layout_constraintRight_toLeftOf="imgn2"
                app:layout_constraintTop_toTopOf="@+id/button2"
                android:textAllCaps="false"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:text="@string/sent" />

            <ImageView
                android:id="@+id/imgn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/sent"
                app:layout_constraintRight_toRightOf="@+id/button2"
                app:layout_constraintTop_toTopOf="@+id/button2" />

        </android.support.constraint.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/button3"
                app:layout_constraintRight_toLeftOf="@+id/draft"
                app:layout_constraintTop_toTopOf="@+id/button3" />

            <Button
                android:id="@+id/draft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/img3"
                app:layout_constraintRight_toLeftOf="imgn3"
                app:layout_constraintTop_toTopOf="@+id/button3"
                android:textAllCaps="false"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:text="@string/draft" />

            <ImageView
                android:id="@+id/imgn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/draft"
                app:layout_constraintRight_toRightOf="@+id/button3"
                app:layout_constraintTop_toTopOf="@+id/button3" />

        </android.support.constraint.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/button4"
                app:layout_constraintRight_toLeftOf="@+id/trash"
                app:layout_constraintTop_toTopOf="@+id/button4" />

            <Button
                android:id="@+id/trash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/img4"
                app:layout_constraintRight_toLeftOf="imgn4"
                app:layout_constraintTop_toTopOf="@+id/button4"
                android:textAllCaps="false"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:text="@string/trash" />

            <ImageView
                android:id="@+id/imgn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/trash"
                app:layout_constraintRight_toRightOf="@+id/button4"
                app:layout_constraintTop_toTopOf="@+id/button4" />

        </android.support.constraint.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

    </ScrollView>

</LinearLayout>